fixed about grid on mobile

--- a/app/webpack/components/grid/_grid.scss
+++ b/app/webpack/components/grid/_grid.scss
@@ -8,6 +8,12 @@
 	box-sizing: border-box;
 	width: 100%;
 	margin: 0 auto;
-	gap: 5rem;
-	grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+	gap: 2rem;
+	grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));
+}
+
+@media screen and (max-width: 760px) {
+	.grid {
+		grid-template-columns: auto;		
+	}
 }
